# FireSentinel

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy.yml
.streamlit/: config.toml
config/: monitoring.yml
docs/: BUILD_PLAN.md  PRD.md
scripts/: deploy.sh  seed_historical.py
scripts/systemd/: firesentinel.service
src/firesentinel/: __main__.py  config.py  main.py
src/firesentinel/alerts/: dispatcher.py  telegram.py  templates.py  whatsapp.py
src/firesentinel/core/: pipeline.py  scheduler.py  types.py
src/firesentinel/dashboard/: app.py  theme.py
src/firesentinel/dashboard/components/: charts.py  fire_map.py
src/firesentinel/dashboard/pages/: admin.py  detail.py  map.py
src/firesentinel/db/: engine.py  models.py
src/firesentinel/ingestion/: firms.py  roads.py  weather.py
src/firesentinel/processing/: classifier.py  clustering.py  dedup.py
tests/: conftest.py  test_alerts.py  test_classifier.py  test_clustering.py  test_dedup.py  test_firms.py  test_integration.py  test_pipeline.py  test_roads.py  test_templates.py  test_types.py  test_weather.py
